attempt to resolve mobile navbar error: not showing when scrolling

--- a/_sass/components/_navbar.scss
+++ b/_sass/components/_navbar.scss
@@ -83,7 +83,7 @@
     border: none;
     background-color: transparent; // Replace with your desired color
     .navbar-brand {
-      font-size: 1.5em; // Adjust the font size for mobile
+      font-size: 1 em; // Adjust the font size for mobile
       -webkit-transition: all 0.3s;
       -moz-transition: all 0.3s;
       transition: all 0.3s;
@@ -97,7 +97,7 @@
       padding: 0.8em 0.5em !important; // Adjust the padding for mobile
     }
     &.navbar-shrink {
-      position: top;
+      // position: top;
       padding-top: 0;
       // padding-bottom: 0;
       background-color: $gray-900;
